# sieci

./: CMakeLists.txt  README.md  main.cpp  reports.hpp  sieci.sln  vehicles.cpp  vehicles.hpp
include/: factory.hpp  nodes.hpp  package.hpp  storage_types.hpp
net_sim-main/: CMakeLists.txt  README.md  main.cpp  struct_input.txt
net_sim-main/include/: factory.hpp  nodes.hpp  package.hpp  reports.hpp  simulation.hpp  storage_types.hpp  types.hpp
net_sim-main/netsim_tests/mocks/: global_functions_mock.hpp
net_sim-main/netsim_tests/test/: test_nodes.cpp  test_package.cpp  test_reports.cpp
net_sim-main/src/: factory.cpp  nodes.cpp  package.cpp  reports.cpp  simulation.cpp  storage_types.cpp
netsim_tests/mocks/: nodes_mocks.hpp
netsim_tests/test/: test_package.cpp
sieci/: factory.cpp  factory.hpp  helpers.hpp  nodes.cpp  nodes.hpp  package.cpp  package.hpp  reports.cpp  reports.hpp  sieci.vcxproj  sieci.vcxproj.filters  simulation.cpp  simulation.hpp  storage_types.cpp  storage_types.hpp  types.hpp
src/: factory.cpp  nodes.cpp
